sexto dia java(loops),angular(bootstrap)

--- a/front/mi-primer-angular/src/app/app.html
+++ b/front/mi-primer-angular/src/app/app.html
@@ -1,2 +1,6 @@
-
+<!-- es una directiva de angulaas que va enlasada a la ruta que nosotros tenemos
+cuando yo llame a las rutas de mi app esta es la parte donde se va estarmostrando todo -->
+<div class="btn-">
 <router-outlet />
+</div>
+
