--- a/front/mi-primer-angular/src/app/view/user/user.component/user.component.html
+++ b/front/mi-primer-angular/src/app/view/user/user.component/user.component.html
@@ -1,6 +1,13 @@
 <!-- <p>user.component works!</p>
 <pre>{{ users | json }}</pre> -->
 
+
+
+
+<div><button class="btn btn-primary mb-4">boton con botstrap</button></div>
+<div><button>boton sin bootstrap</button></div>
+
+
 <ul>
   <li *ngFor="let u of users">
     {{ u.name }} - {{ u.email }}
